@@ -1,5 +1,11 @@
 2005-10-29  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: add a bunch of aliases for
+	"application/vnd.ms-access", change its description. Thanks to
+	Jarosław Staniek. Fixes #3179.
+
+2005-10-29  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add "application/x-go-sgf" MIME type. Thanks
 	to Peter Lundqvist. Fixes #592.
 
